Finalizando carga e inicializando serviço de busca extrato por número da conta corrente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=9000
+
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -8,3 +10,7 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.hibernate.ddl-auto=update
+
+#Caminho de arquivos para Importações
+desafio.importacao.carga.filename=lancamento-conta-legado.json
+desafio.importacao.carga.processar=./arquivos-processar
